--- a/index.html
+++ b/index.html
@@ -7,6 +7,19 @@
     <title>Checkpoint 1</title>
 </head>
 <body>
-    
+    <div class="navbar">
+        <div class="avatar"></div>
+    </div>
+    <div class="cuerpo">
+    <div class="container">
+        <button class="big-button">BIG BUTTON</button>
+        <input type="search" placeholder="search">
+        <button class="disable-button">DISABLED BUTTON</button>
+    </div>
+    <div class="footer">
+        <a href="#">Footer text 1</a>
+        <a href="#">Footer text 2</a>
+    </div>
+    </div>
 </body>
 </html>
